# chess

./: .gitignore  main.py  pyproject.toml
code/: exploring_the_games.ipynb  exploring_the_games.py  feature_engg.ipynb  png_to_csv.py  preprocess.ipynb
notebooks/: 01_exploring_the_games.ipynb  02_preprocess.ipynb  03_feature_engg.ipynb  04_training.ipynb
